Added loading the list of comic months and years from the db [#1725]
Also replaced .collect(Collectors.toList()) with .toList() throughout
the codebase to keep the code updated.